# Personal_web_assistant_deploy

./: .gitignore  Dockerfile  Dockerfile~  Procfile  README.md  docker-compose.yml  populate_tags.py  pyproject.toml  requirements.txt  weather-forecast
assistant_project/: settings.py  settings.py~  urls.py  wsgi.py
assistant_project/assistant_project/: settings.py
contacts/: forms.py  models.py  urls  urls.py  views.py
contacts/migrations/: 0001_initial.py
files/: admin.py  forms.py  models.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_category_user.py  0003_alter_category_user_alter_file_category_and_more.py  0004_alter_category_user.py  0005_alter_category_user.py  0006_alter_category_user_alter_file_category_and_more.py  0007_alter_category_name.py  0008_alter_file_url.py  0009_alter_file_category.py  0010_alter_file_category.py  0011_remove_file_category_file_category.py  0012_remove_file_category_file_category.py  0013_alter_file_category.py  0014_alter_file_category.py  0015_alter_file_url.py  0016_file_name.py  0017_alter_file_name.py  0018_rename_name_file_name_file.py
news_scraping/: models.py  urls.py  utils.py  views.py
news_scraping/migrations/: 0001_initial.py  0002_newsarticle.py
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_tag_user.py  0003_note_user.py  0004_remove_tag_user.py
postgres-data/: postmaster.pid
project_poetry/: pyproject.toml
users/: forms.py  urls.py  views.py
weather/: asgi.py  models.py  urls.py  utils.py  views.py
(+134 files in other folders)
