[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["d.s.puliaiev@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
cloudinary = "^1.40.0"
lxml = "^5.2.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
