[tool.poetry]
name = "project-poetry"
version = "0.1.5"
description = ""
authors = ["Denys Puliaiev <d.s.puliaiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
cloudinary = "^1.40.0"
lxml = "^5.2.1"
whitenoise = "^6.7.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"